recent changes for it